# pacman_tournament

./: Cargo.toml
admin/: Cargo.toml
admin/src/: cli.yml  main.rs
controller/: Cargo.toml
controller/src/: main.rs  main_old.rs  view.rs
db/: Cargo.toml
db/migrations/2020-11-02-192211_initial/: up.sql
db/src/: actions.rs  lib.rs  model.rs  schema.rs
model/: Cargo.toml
model/src/: animation.rs  bucket.rs  entity.rs  food.rs  grid.rs  lib.rs  map.rs  network.rs
model/src/entity/: mob.rs  player.rs
python/: creds  shim.py  shim_temp.py
src/: bucket.rs  entity.rs  main.rs  map.rs  network.rs  temp.json
tournament/: Cargo.toml  PostgreDocker  docker-compose.yml
tournament/deployment/: pacman.uclaisociety.com
tournament/migrations/2020-11-02-192211_initial/: up.sql
tournament/src/: authentication.rs  competitor.rs  connection.rs  db.rs  game.rs  main.rs  map.txt  score.rs  spectator.rs  stream_map_bucket.rs
tournament/src/db/: actions.rs  model.rs  schema.rs
tournament/src/spectator/: delta.rs  initial.rs  message.rs  serialize.rs
tournament_ui/: .eslintrc.yml  package.json
tournament_ui/public/: index.html  manifest.json
tournament_ui/src/: App.js  App.scss  AssetManager.js  index.js
tournament_ui/src/components/: AllGames.js  AllGames.scss  ErrorView.js  ErrorView.scss  Game.js  Game.scss  Leaderboard.js  Leaderboard.scss
tournament_ui/src/state/: action.js  reducer.js  websocket.js
